--- a/social_red/Gemfile
+++ b/social_red/Gemfile
@@ -7,6 +7,9 @@ gem 'rails', '3.2.13'
 
 gem 'sqlite3'
 gem "custom_error_message", "~> 1.1.1"
+gem "validates_existence", "~> 0.8.0"
+
+
 
 # Gems used only for assets and not required
 # in production environments by default.
